--- a/backend/package.json
+++ b/backend/package.json
@@ -4,30 +4,31 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "dev": "strapi develop",
+    "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
   },
   "devDependencies": {},
   "dependencies": {
+    "knex": "<0.20.0",
+    "sqlite3": "latest",
     "strapi": "3.4.0",
     "strapi-admin": "3.4.0",
-    "strapi-utils": "3.4.0",
-    "strapi-plugin-content-type-builder": "3.4.0",
-    "strapi-plugin-content-manager": "3.4.0",
-    "strapi-plugin-users-permissions": "3.4.0",
-    "strapi-plugin-email": "3.4.0",
-    "strapi-plugin-upload": "3.4.0",
     "strapi-connector-bookshelf": "3.4.0",
-    "knex": "<0.20.0",
-    "sqlite3": "latest"
+    "strapi-plugin-content-manager": "3.4.0",
+    "strapi-plugin-content-type-builder": "3.4.0",
+    "strapi-plugin-email": "3.4.0",
+    "strapi-plugin-graphql": "^3.4.0",
+    "strapi-plugin-upload": "3.4.0",
+    "strapi-plugin-users-permissions": "3.4.0",
+    "strapi-utils": "3.4.0"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "444e9334-6adc-462b-a2f7-95665a14ba22"
+    "uuid": "2591b861-3c89-4450-91f7-d32bdd09c64e"
   },
   "engines": {
     "node": ">=10.16.0 <=14.x.x",
