--- a/backend/api/restaurant/models/restaurant.settings.json
+++ b/backend/api/restaurant/models/restaurant.settings.json
@@ -13,7 +13,7 @@
     "name": {
       "type": "string"
     },
-    "discription": {
+    "description": {
       "type": "richtext"
     },
     "image": {
