--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,10 @@
     "@apollo/react-ssr": "^3.1.5",
     "apollo-boost": "^0.4.7",
     "apollo-link-http": "^1.5.17",
+    "axios": "^0.19.2",
     "graphql": "^15.0.0",
+    "isomorphic-fetch": "^2.2.1",
+    "js-cookie": "^2.2.1",
     "next": "^9.4.0",
     "next-apollo": "^3.1.10",
     "react": "^16.13.1",
