カートへ商品追加するロジック作成 dishにquantity追加 appContextにaddItemを追加 AppContextからonClickでaddItemを使用 名前が判り辛いのでresをdishに変更

--- a/backend/api/dish/models/dish.settings.json
+++ b/backend/api/dish/models/dish.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "dishes",
   "info": {
-    "name": "dish"
+    "name": "dish",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -33,6 +34,9 @@
     "restaurant": {
       "model": "restaurant",
       "via": "dishes"
+    },
+    "quantity": {
+      "type": "integer"
     }
   }
 }
