--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "stripe": "^9.16.0"
+  },
   "dependencies": {
     "knex": "<0.20.0",
     "sqlite3": "latest",
